trying to fixed hero-icon on mobile device

--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -366,9 +366,10 @@ footer {
      }
 
      img {
-      transform: scale(1);
+      transform: scale(1.2);
       margin: auto;
       right: 0%;
+      margin-top: -3%;
      }
 
      a {
